<resources>
    <string name="app_name">Electric Car</string>
    <string name="enviar">Enviar</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="pre_o">Preço</string>
    <string name="preco">KZ 1.250.000</string>
    <string name="bateria">Bateria</string>
    <string name="bateria_value">93,34 kWh</string>
    <string name="potencia_value">646 CV</string>
    <string name="pot_ncia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="recarga_value">23 min</string>
    <string name="pre_o_kwh">Preço kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="pizza">Pizza</string>
    <string name="hambuguer">Hambuguer</string>
    <string name="selecione_sua_comida_favorita">Selecione sua comida favorita</string>
    <string name="meu_compromisso_1">Meu Compromisso 1</string>
    <string name="meu_compromisso_2">Meu compromisso 2</string>
    <string name="ligar_lampada">Ligar Lampada?</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string-array name="array_cidades">
        <item>Luanda</item>
        <item>Cazenga</item>
        <item>Nova Iorque</item>
    </string-array>
</resources>